# sfuzzie

./: README.md  pyproject.toml
src/sfuzzie/: __init__.py  fuzzer.py
